test: updates add bet form again
